Changelog for App-Magpie

{{$NEXT}}
 - fixspec: adding MYMETA to %doc

1.113090  2011-11-05 11:01:50 Europe/Paris
 - old: update modules.skip

1.112870  2011-10-14 10:17:42 Europe/Paris
 - fixspec: removing %buildroot cleaning in %install
 - old: update modules.skip

1.112420  2011-08-30 16:23:42 Europe/Paris
 - old: new category "unparsable"

1.111890  2011-07-08 13:05:14 Europe/Paris
 - fixspec: recognizing more examples for %doc
 - old: classify modules in multiple packages as normal (in case of
   systems with both i586 & x86_64 medias)

1.111730  2011-06-22 16:45:33 Europe/Paris
 - old: update modules.skip

1.111720  2011-06-21 17:17:58 Europe/Paris
 - fixspec: removing default %clean section
 - fixspec: removing default %defattr in %doc
 - dwim: prevent errors when multiple virtual repos
 - magpie: more meaningful package name in script

1.111060  2011-04-16 19:17:53 Europe/Paris

1.111040  2011-04-14 10:01:06 Europe/Paris
 - dwim: do not fail when there is no module to update

1.111030  2011-04-13 10:54:04 Europe/Paris
 - old: update modules.skip

1.111020  2011-04-12 14:23:04 Europe/Paris
 - new command: dwim
 - checkout: using temp chdir to not remove carpet under other commands
 - logger: prepend pid to each log message
 - old: bigger space left for version information columns

1.110840  2011-03-25 10:11:11 Europe/Paris
 - old: adding skip based on package name
 - old: modules.skip updated

1.110720  2011-03-13 10:46:39 Europe/Paris
 - update: allow tabs in %define upstream_version

1.110690  2011-03-10 14:00:51 Europe/Paris
 - skiplist update

1.110680  2011-03-09 12:16:27 Europe/Paris
 - new command: old
 - all commands are now dispatched in their own modules, to be able to
   require them (instead of use-ing them)

1.110590  2011-02-28 15:32:09 Europe/Paris
 - new command: config
 - config: support for --dump
 - config: support for default logging level

1.110570  2011-02-26 15:57:51 Europe/Paris